# gmail-tui

./: .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  REUSE.toml  ROADMAP.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  reuse-compliance.yml
config/: config.json  config.yaml
scripts/: check_trailing_whitespace.py  run_e2e_tests.sh  run_tests.sh
src/gmail_tui/: __init__.py  __main__.py  app.py  email.py  imap_tree.py  list.py  search.py  show.py  thread.py  threads.py
src/gmail_tui/commands/: base.py  init.py  list.py  mkdir.py  mv.py  rm.py  search.py  show.py  thread.py  threads.py  tree.py
src/gmail_tui/config/: __init__.py  actions.py  default.py  default.yaml  init.py  loader.py  types.py
src/gmail_tui/utils/: __init__.py  imap.py
src/gmail_tui/widgets/: email_list.py  folder_tree.py
tests/: __init__.py  conftest.py  test_config.py  test_dummy.py  test_e2e.py
tests/commands/: __init__.py  test_list.py  test_mkdir.py  test_mv.py  test_rm.py  test_search.py  test_show.py  test_thread.py  test_threads.py  test_tree.py
tests/fixtures/: sample.mbox  test_config.yaml
tests/fixtures/greenmail_preload/test@localhost/INBOX/: 001_test_email_1.eml  002_test_email_2.eml  003_patch_email.eml  004_review_email.eml  005_applied_email.eml  005_applied_email.eml.license  006_thread_original.eml  006_thread_original.eml.license  007_thread_reply.eml  008_thread_reply2.eml
