# SPDX-FileCopyrightText: 2024 Chen Linxuan <me@black-desk.cn>
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "gmail-tui"
version = "0.1.0"
description = "A terminal user interface for Gmail"
authors = [
    { name = "Chen Linxuan", email = "me@black-desk.cn" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imapclient>=3.0.1,<4.0.0",
    "textual>=2.1.2,<3.0.0",
    "xdg>=6.0.0,<7.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "toml>=0.10.2,<0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "ruff>=0.11.2,<0.12.0",
    "reuse>=5.0.2,<6.0.0",
    "textual-dev>=1.7.0,<2.0.0"
]

[project.scripts]
gmail-tui = "gmail_tui.__init__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_tui"]

[tool.ruff]
src = [".ruff.toml"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "ruff>=0.11.2,<0.12.0",
    "reuse>=5.0.2,<6.0.0",
    "textual-dev>=1.7.0,<2.0.0"
]
